deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dunena
  namespace: dunena
spec:
  type: ClusterIP
  selector:
    app: dunena
  ports:
    - name: http
      port: 80
      targetPort: 3000
